syntax = "proto3";

package inclusion_list;

message ProtoAddress {
  string hex = 1;
  bytes raw = 2;
}

message ProtoTransaction {
    bytes encoded_txn = 1;
    ProtoAddress address = 2;
    uint64 timestamp = 3;
}

message ProtoInclusionList {
    repeated ProtoTransaction encoded_txns = 1;
    uint64 round = 2;
    uint64 consensus_timestamp = 3;
}